tmp/funnel-output_path-YMOe7FVa.tmp/gyak09/tests/unit/pods/errors/new/route-test.jshint.js
/home/ubuntu/workspace/gyak09/tmp/jshinter-output_path-j5bwJnWa.tmp/unit/pods/errors/new/route-test.jshint.js